--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,10 @@ android {
 }
 
 dependencies {
+    api 'com.google.android.material:material:1.1.0-alpha05'
     api 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.2.1'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -34,5 +37,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
